added terminal, hardcoded terminal position in css(fix later)

--- a/CloudLion/src/main/resources/static/html/fontOption.html
+++ b/CloudLion/src/main/resources/static/html/fontOption.html
@@ -1,4 +1,4 @@
-			<option value="" name="font" onclick="setLang()"></option>
+			<option value="" name="font" onclick="setFont()"></option>
 			<option value="16px" name="font" onclick="setFont()">16</option>
 			<option value="18px" name="font" onclick="setFont()">18</option>
 			<option value="20px" name="font" onclick="setFont()">20</option>
