Implement Spring security

--- a/CloudLion/src/main/resources/static/html/header.html
+++ b/CloudLion/src/main/resources/static/html/header.html
@@ -1,6 +1,6 @@
-<a href = "index" class="lion">CloudLion</a>
+<a href = "home" class="lion">CloudLion</a>
 <span class="right">
-<a href = "index">Home</a>&nbsp;
+<a href = "home">Home</a>&nbsp;
 <a href = "editor">Editor</a>&nbsp;
 <a href = "signup">Sign Up</a>&nbsp;
 </span>
