finished js for generating list of ace theems

--- a/CloudLion/src/main/resources/static/html/themeOption.html
+++ b/CloudLion/src/main/resources/static/html/themeOption.html
@@ -1,3 +1,5 @@
+			<!--  
+			
 			<option value="" name="theme" onclick="setTheme()"></option>
 			<option value="katzenmilch" name="theme" onclick="setTheme()">Katzenmilch</option>
 			<option value="chaos" name="theme" onclick="setTheme()">Chaos</option>
@@ -5,4 +7,7 @@
 			<option value="mono_industrial" name="theme" onclick="setTheme()">Industrial</option>
 			<option value="xcode" name="theme" onclick="setTheme()">Xcode</option>
 			
+		-->
 		
+		
+		<div id="themeData"></div>
