--- a/CloudLion/src/main/resources/static/html/fileOption.html
+++ b/CloudLion/src/main/resources/static/html/fileOption.html
@@ -1,5 +1,5 @@
-			<option value=""  onclick="setLang()"></option>
-			<option value="new" onclick="setLang()">New</option>
-			<option value="save" onclick="setLang()">Save</option>
-			<option value="saveas" onclick="setLang()">Save As</option>
-			<option value="load" onclick="setLang()">Load</option>
+			<option value=""  name="file" onclick="setFile()"></option>
+			<option value="new" name="file" onclick="setFile()">Clear</option>
+			<option value="save" name="file" onclick="setFile()">Save</option>
+			<option value="saveas" name="file" onclick="setFile()">Save As</option>
+			<option value="load" name="file" onclick="setFile()">Load</option>
