--- a/CloudLion/src/main/resources/static/html/themeOption.html
+++ b/CloudLion/src/main/resources/static/html/themeOption.html
@@ -1,13 +1,33 @@
-			<!--  
-			
-			<option value="" name="theme" onclick="setTheme()"></option>
-			<option value="katzenmilch" name="theme" onclick="setTheme()">Katzenmilch</option>
-			<option value="chaos" name="theme" onclick="setTheme()">Chaos</option>
-			<option value="tomorrow_night_blue" name="theme" onclick="setTheme()">Night Blue</option>
-			<option value="mono_industrial" name="theme" onclick="setTheme()">Industrial</option>
-			<option value="xcode" name="theme" onclick="setTheme()">Xcode</option>
-			
-		-->
-		
-		
-		<div id="themeData"></div>
+
+<option value="Chrome" name="theme" onclick="setTheme()">Chrome</option>
+<option value="Clouds" name="theme" onclick="setTheme()">Clouds</option>
+<option value="Crimson Editor" name="theme" onclick="setTheme()">Crimson Editor</option>
+<option value="Dawn" name="theme" onclick="setTheme()">Dawn</option>
+<option value="Dreamweaver" name="theme" onclick="setTheme()">Dreamweaver</option>
+<option value="Eclipse" name="theme" onclick="setTheme()">Eclipse</option>
+<option value="IPlastic" name="theme" onclick="setTheme()">IPlastic</option>
+<option value="Solarized Light" name="theme" onclick="setTheme()">Solarized Light</option>
+<option value="TextMate" name="theme" onclick="setTheme()">TextMate</option>
+<option value="Tomorrow" name="theme" onclick="setTheme()">Tomorrow</option>
+<option value="XCode" name="theme" onclick="setTheme()">XCode</option>
+<option value="Kuroir" name="theme" onclick="setTheme()">Kuroir</option>
+<option value="KatzenMilch" name="theme" onclick="setTheme()">KatzenMilch</option>
+<option value="sqlserver" name="theme" onclick="setTheme()">SQL Server</option>
+<option value="ambiance" name="theme" onclick="setTheme()">Ambiance</option>
+<option value="chaos" name="theme" onclick="setTheme()">Chaos</option>
+<option value="clouds_midnight" name="theme" onclick="setTheme()">Clouds Midnight</option>
+<option value="cobalt" name="theme" onclick="setTheme()">Cobalt</option>
+<option value="idle_fingers" name="theme" onclick="setTheme()">idle Fingers</option>
+<option value="kr_theme" name="theme" onclick="setTheme()">krTheme</option>
+<option value="merbivore" name="theme" onclick="setTheme()">Merbivore</option>
+<option value="merbivore_soft" name="theme" onclick="setTheme()">Merbivore Soft</option>
+<option value="mono_industrial" name="theme" onclick="setTheme()">Mono Industrial</option>
+<option value="pastel_on_dark" name="theme" onclick="setTheme()">Pastel on dark</option>
+<option value="solarized_dark" name="theme" onclick="setTheme()">Solarized Dark</option>
+<option value="terminal" name="theme" onclick="setTheme()">Terminal</option>
+<option value="tomorrow_night" name="theme" onclick="setTheme()">Tomorrow Night</option>
+<option value="tomorrow_night_blue" name="theme" onclick="setTheme()">Tomorrow Night Blue</option>
+<option value="tomorrow_night_bright" name="theme" onclick="setTheme()">Tomorrow Night Bright</option>
+<option value="tomorrow_night_eighties" name="theme" onclick="setTheme()">Tomorrow Night 80s</option>
+<option value="twilight" name="theme" onclick="setTheme()">Twilight</option>
+<option value="vibrant_ink" name="theme" onclick="setTheme()">Vibrant Ink</option>
