fixed the themes it was capitalization

--- a/CloudLion/src/main/resources/static/html/themeOption.html
+++ b/CloudLion/src/main/resources/static/html/themeOption.html
@@ -1,17 +1,16 @@
-
-<option value="Chrome" name="theme" onclick="setTheme()">Chrome</option>
-<option value="Clouds" name="theme" onclick="setTheme()">Clouds</option>
-<option value="Crimson Editor" name="theme" onclick="setTheme()">Crimson Editor</option>
-<option value="Dawn" name="theme" onclick="setTheme()">Dawn</option>
-<option value="Dreamweaver" name="theme" onclick="setTheme()">Dreamweaver</option>
-<option value="Eclipse" name="theme" onclick="setTheme()">Eclipse</option>
-<option value="IPlastic" name="theme" onclick="setTheme()">IPlastic</option>
-<option value="Solarized Light" name="theme" onclick="setTheme()">Solarized Light</option>
-<option value="TextMate" name="theme" onclick="setTheme()">TextMate</option>
-<option value="Tomorrow" name="theme" onclick="setTheme()">Tomorrow</option>
-<option value="XCode" name="theme" onclick="setTheme()">XCode</option>
-<option value="Kuroir" name="theme" onclick="setTheme()">Kuroir</option>
-<option value="KatzenMilch" name="theme" onclick="setTheme()">KatzenMilch</option>
+<option value="" name="theme" onclick="setTheme()"></option>
+<option value="chrome" name="theme" onclick="setTheme()">Chrome</option>
+<option value="clouds" name="theme" onclick="setTheme()">Clouds</option>
+<option value="dawn" name="theme" onclick="setTheme()">Dawn</option>
+<option value="dreamweaver" name="theme" onclick="setTheme()">Dreamweaver</option>
+<option value="eclipse" name="theme" onclick="setTheme()">Eclipse</option>
+<option value="iplastic" name="theme" onclick="setTheme()">IPlastic</option>
+<option value="solarized_light" name="theme" onclick="setTheme()">Solarized Light</option>
+<option value="textmate" name="theme" onclick="setTheme()">TextMate</option>
+<option value="tomorrow" name="theme" onclick="setTheme()">Tomorrow</option>
+<option value="xcode" name="theme" onclick="setTheme()">XCode</option>
+<option value="kuroir" name="theme" onclick="setTheme()">Kuroir</option>
+<option value="katzenmilch" name="theme" onclick="setTheme()">KatzenMilch</option>
 <option value="sqlserver" name="theme" onclick="setTheme()">SQL Server</option>
 <option value="ambiance" name="theme" onclick="setTheme()">Ambiance</option>
 <option value="chaos" name="theme" onclick="setTheme()">Chaos</option>
